feat(statistics): Add official team performance ranking
